--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,15 @@ this project. This project adheres to Semantic Versioning v2.0.0
 
 All release dates are formatted as such: MM/DD/YYYY
 
+## v0.2.0-2019.4.22.f01cdf - 4/23/2019
+### Added
+ - Footer link to issue tracker
+ - New version notice dialog
+
+### Changed
+ - School days countdown now accounts for end of school day (3:20 PM)
+ - Optimized DOM modifications
+
 ## v0.2.0-2019.4.21.24c64d - 4/21/2019
 ### Added
  - Google Analytics tracking of referrals
