Implement new version updater
daysTillGrad is one of those apps that runs continously in the
background. Without a builtin updater, many instances will run outdated.

- Rename docs/VERSION to docs/version.txt
- Remove src/lib/version.js
- Implement version library string functions
  in src/lib/version/string.js
- Implement version library new version checker
  in src/lib/version/checker.js
- Add version library parameters in src/lib/version/params.js
- Implement version library function aggregations
  in src/lib/version/index.js
- Modify reference to the improved version library
  in scripts/build-version.js
- Modify reference to the improved version library
  in src/lib/external-uris.js
- Modify reference to the improved version library in src/js/index.js
- Optimize New Version Display (NVD) DOM creation algorithm
  in src/js/index.js
- Implement New Version Updater (NVD) algorithm in src/js/index.js
- Implement NVU explicit toggle parameter `nvu_disable`
  in src/js/index.js

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,13 @@ this project. This project adheres to Semantic Versioning v2.0.0
 
 All release dates are formatted as such: MM/DD/YYYY
 
+## v0.2.0-2019.4.23.62b18e - 4/23/2019
+### Added
+ - New version checker and updater
+
+### Changed
+ - Version library is now fragmented for ease of maintenance
+
 ## v0.2.0-2019.4.22.f01cdf - 4/23/2019
 ### Added
  - Footer link to issue tracker
