Implement special events notice
There are a number of landmark special events in the senior year.
Examples: last full week of school, Senior BBQ, Prom, and, of course,
Graduation day. This feature captures and emphasized such events.

- Add animation to notice_create() in src/js/index.js
- Add heights to the `title` class inside of `countdown-box`
  in src/styles/style.scss

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,10 @@ this project. This project adheres to Semantic Versioning v2.0.0
 
 All release dates are formatted as such: MM/DD/YYYY
 
+## v0.3.0 - 5/8/2019
+### Added
+ - Special events notice
+
 ## v0.2.0 - 4/25/2019
 ### Added
  - New version checker and updater
