--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,10 @@ this project. This project adheres to Semantic Versioning v2.0.0
 
 All release dates are formatted as such: MM/DD/YYYY
 
+## v0.3.1 - 5/12/2019
+### Fixed
+ - School days mode miscalculation due to the end-of-school day algorithm
+
 ## v0.3.0 - 5/8/2019
 ### Added
  - Special events notice
